Refactoring of json MsgParsers into mappers, moving to jdk8 date/time classes